syntax = "proto3";

package io.distia.probe.core.pubsub.models;

option java_package = "io.distia.probe.core.pubsub.models";
option java_outer_classname = "CloudEventProtos";
option java_multiple_files = true;

// CloudEvents 1.0 specification for Kafka message keys
message CloudEvent {
  // Unique event identifier (UUID)
  string id = 1;

  // Event source (e.g., kafka-testing-probe)
  string source = 2;

  // CloudEvents specification version (default: 1.0)
  string specversion = 3;

  // Event type (e.g., user.created)
  string type = 4;

  // Event timestamp in ISO 8601 format (per CloudEvents spec)
  string time = 5;

  // Event subject (e.g., user/123)
  string subject = 6;

  // Payload MIME type (default: application/octet-stream)
  string datacontenttype = 7;

  // Correlation ID for event tracking
  string correlationid = 8;

  // Payload schema version (e.g., v1, v2)
  string payloadversion = 9;

  // Optional source timestamp in microseconds (0 means not set)
  int64 time_epoch_micro_source = 10;
}
